--- a/Partials/faqPartial.html
+++ b/Partials/faqPartial.html
@@ -75,7 +75,7 @@
         <b>Is AutoSPInstaller Online Open Source?</b>
         <ul>
             <li>
-                Yes its on GitHub <a href="https://github.com/IvanJosipovic/AutoSPInstallerOnline" target="_blank">IvanJosipovic/AutoSPInstallerOnline</a>.
+                Yes, its on GitHub <a href="https://github.com/IvanJosipovic/AutoSPInstallerOnlineGithubPage" target="_blank">IvanJosipovic/AutoSPInstallerOnlineGithubPage</a>.
             </li>
         </ul>
     </li>
